--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -10,18 +10,19 @@
 <body class="bg-gray-100 flex items-center justify-center h-screen">
     <div class="bg-white p-6 rounded shadow-md w-96">
         <h1 class="text-2xl font-semibold mb-4">Register</h1>
-        <form>
+        <form method="post">
+            {% csrf_token %}
             <div class="mb-4">
                 <label for="email" class="block text-gray-600">Email</label>
                 <input type="email" id="email" name="email" class="w-full border rounded py-2 px-3" placeholder="Your Email" required>
             </div>
             <div class="mb-4">
                 <label for="password" class="block text-gray-600">Password</label>
-                <input type="password" id="password" name="password" class="w-full border rounded py-2 px-3" placeholder="Password" required>
+                <input type="password" id="password" name="password1" class="w-full border rounded py-2 px-3" placeholder="Password" required>
             </div>
             <div class="mb-4">
                 <label for="password-confirm" class="block text-gray-600">Confirm Password</label>
-                <input type="password" id="password-confirm" name="password-confirm" class="w-full border rounded py-2 px-3" placeholder="Confirm Password" required>
+                <input type="password" id="password-confirm" name="password2" class="w-full border rounded py-2 px-3" placeholder="Confirm Password" required>
             </div>
             <button type="submit" class="w-full bg-blue-500 text-white py-2 rounded hover:bg-blue-600">Register</button>
         </form>
