--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -10,7 +10,8 @@
 <body class="bg-gray-100 flex items-center justify-center h-screen">
     <div class="bg-white p-6 rounded shadow-md w-96">
         <h1 class="text-2xl font-semibold mb-4">Login</h1>
-        <form>
+        <form method="post">
+            {% csrf_token %}
             <div class="mb-4">
                 <label for="email" class="block text-gray-600">Email</label>
                 <input type="email" id="email" name="email" class="w-full border rounded py-2 px-3" placeholder="Your Email" required>
